applications/memos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  annotations:
    secret.reloader.stakater.com/reload: "memos-postgres-secret"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: memos
          image: neosmemo/memos:latest@sha256:7dffaf5ba7692d64efd50bc4949e8378abf5e1c9b08aed854448a374ff25d976
          imagePullPolicy: IfNotPresent
#          args:
#            - '--driver'
#            - 'postgres'
#            - '--dsn'
#            - 'postgresql://memos:memos@postgres.postgres-16:5432/memos?sslmode=disable'
          ports:
            - name: http
              containerPort: 5230
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
